added products, orders and tests for them
