# app/models.py
@@ -1,61 +1,51 @@
 from flask_login import UserMixin
-from flask import current_app
 from sqlalchemy import Column, Integer, String, Float, DateTime, Boolean
-from sqlalchemy.orm import DeclarativeBase
-from sqlalchemy.orm import relationship, mapped_column
 from app.extentions import db
 from sqlalchemy_serializer import SerializerMixin
-import jwt
-import time
+
 
 
 class User(db.Model, UserMixin, SerializerMixin):
     __tablename__ = "user"
-    id = Column(Integer, primary_key=True) # primary keys are required by SQLAlchemy
-    public_id = Column(String(50), unique=True) # primary keys are required by SQLAlchemy
+    id = Column(String(1000), unique=True, primary_key=True) # primary keys are required by SQLAlchemy
     name = Column(String(1000), unique=True)
-    firstname = Column(String(1000))
-    lastname = Column(String(1000))
-    email = Column(String(100))
-    password = Column(String(100))
+    firstname = Column(String(1000), nullable=False)
+    lastname = Column(String(1000), nullable=False)
+    email = Column(String(100), nullable=False)
+    password = Column(String(100), nullable=False)
     user_type = Column(Integer, nullable=False)
 
-    def get_as_obj(self):
-        return {
-            "public_id": self.public_id,
-            "name": self.name,
-            "firstname": self.firstname,
-            "lastname": self.lastname,
-            "email": self.email,
-            "user_type": self.user_type
-        }
-    
 
 class Products(db.Model, SerializerMixin):
     __tablename__ = "product"
-    id = Column(Integer, primary_key=True) # primary keys are required by SQLAlchemy
-    public_id = Column(String(50), unique=True) # primary keys are required by SQLAlchemy
+    public_id = Column(String(50), unique=True, primary_key=True) # primary keys are required by SQLAlchemy
     title = Column(String(1000), unique=True)
     price = Column(Integer, nullable=False)
     stock = Column(Integer, nullable=False)
-    
-    def get_as_obj(self):
-        return {
-            "public_id": self.public_id,
-            "title": self.title,
-            "price": self.price,
-            "stock": self.stock
-        }
+
     
 class Suppliers(db.Model, SerializerMixin):
     __tablename__ = "suppliers"
-    id = Column(Integer, primary_key=True) # primary keys are required by SQLAlchemy
-    public_id = Column(String(50), unique=True) # primary keys are required by SQLAlchemy
-    title = Column(String(1000), unique=True)
-    product = Column(String(1000), unique=True)
+    public_id = Column(String(50), unique=True, primary_key=True) # primary keys are required by SQLAlchemy
+    title = Column(String(1000), nullable=False)
+
+
+class Suppliers_Products(db.Model, SerializerMixin):
+    __tablename__ = "suppliers_products"
+    public_id = Column(Integer, primary_key=True) # primary keys are required by SQLAlchemy
+    supplier_public_id = Column(String(50), nullable=False) # primary keys are required by SQLAlchemy
+    product_public_id = Column(String(50), nullable=False) # primary keys are required by SQLAlchemy
+
+
+class Orders(db.Model, SerializerMixin):
+    __tablename__ = "orders_supply"
+    public_id = Column(String(50), unique=True, primary_key=True) # primary keys are required by SQLAlchemy
+    supplier = Column(Integer, nullable=False)
     
-    def get_as_obj(self):
-        return {
-            "public_id": self.public_id,
-            "title": self.title
-        }
+    
+class OrdersPOS(db.Model, SerializerMixin):
+    __tablename__ = "order_pos"
+    public_id = Column(String(50), unique=True, primary_key=True) # primary keys are required by SQLAlchemy
+    product = Column(Integer, nullable=False)
+    costs = Column(Float, nullable=False)
+    amount = Column(Integer, nullable=False)
